--- a/testing_notebooks/FinancialBot_notebook.ipynb
+++ b/testing_notebooks/FinancialBot_notebook.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "19qkkKHBeBNc0DF76l2B5mbMacnjooFqS",
-      "authorship_tag": "ABX9TyM+MQfCpGvM+xuSHHvUEh+N",
+      "authorship_tag": "ABX9TyN1G3E6PSxpB8rF0Q8qGcJV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,7 +26,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gjosuepagan/FinancialChatbot/blob/main/FinancialBot_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gjosuepagan/FinancialChatbot/blob/main/testing_notebooks/FinancialBot_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -37,25 +37,130 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ta3oBmyVyTz0",
-        "outputId": "8486adf7-4c54-42bc-bef0-89680131c5ff"
+        "outputId": "e3f31817-3040-4a43-b10d-6189e9a3bc3c"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'FinancialChatbot'...\n",
-            "remote: Enumerating objects: 62, done.\u001b[K\n",
-            "remote: Counting objects: 100% (62/62), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (57/57), done.\u001b[K\n",
-            "remote: Total 62 (delta 13), reused 6 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (62/62), 29.64 MiB | 16.07 MiB/s, done.\n",
-            "Resolving deltas: 100% (13/13), done.\n"
+            "fatal: destination path 'FinancialChatbot' already exists and is not an empty directory.\n"
           ]
         }
       ],
       "source": [
         "!git clone https://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@github.com/gjosuepagan/FinancialChatbot.git"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /content/FinancialChatbot\n",
+        "\n",
+        "!git pull origin main\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WBzoJZsFWo-V",
+        "outputId": "574cd62b-ab44-47f0-81ee-ff160b06baaf"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/FinancialChatbot\n",
+            "remote: Enumerating objects: 7, done.\u001b[K\n",
+            "remote: Counting objects: 100% (7/7), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (2/2), done.\u001b[K\n",
+            "remote: Total 4 (delta 2), reused 4 (delta 2), pack-reused 0 (from 0)\u001b[K\n",
+            "Unpacking objects: 100% (4/4), 410 bytes | 410.00 KiB/s, done.\n",
+            "From https://github.com/gjosuepagan/FinancialChatbot\n",
+            " * branch            main       -> FETCH_HEAD\n",
+            "   bb92b2d..ec8893b  main       -> origin/main\n",
+            "Updating bb92b2d..ec8893b\n",
+            "Fast-forward\n",
+            " scripts/pdf_processing.py | 2 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
+            " 1 file changed, 1 insertion(+), 1 deletion(-)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip3 install -r requirements.txt"
+      ],
+      "metadata": {
+        "id": "q8ocVrCaStpK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Processing the raw PDF files for Retrieval-Augmented Generation"
+      ],
+      "metadata": {
+        "id": "vkfjnCWMRbfH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python scripts/pdf_processing.py"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NghxVBymRa5B",
+        "outputId": "37feedd7-bfbf-455a-8f82-3041bbbbec0f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2024-10-24 08:30:40.507425: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+            "2024-10-24 08:30:40.526728: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+            "2024-10-24 08:30:40.532586: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+            "2024-10-24 08:30:40.546559: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+            "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+            "2024-10-24 08:30:41.672565: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+            "/usr/local/lib/python3.10/dist-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+            "  warnings.warn(\n",
+            "Processed and saved: /content/FinancialChatbot/data/processed_pdf_rag/How to Build Credit With and Without a Credit Card - NerdWallet_chunks.txt\n",
+            "Embeddings for How to Build Credit With and Without a Credit Card - NerdWallet.pdf in Pinecone\n",
+            "Processed and saved: /content/FinancialChatbot/data/processed_pdf_rag/Introductory Guide to Personal Finance_chunks.txt\n",
+            "Embeddings for Introductory Guide to Personal Finance.pdf in Pinecone\n",
+            "Processed and saved: /content/FinancialChatbot/data/processed_pdf_rag/Personal Finance for Dummies_chunks.txt\n",
+            "Embeddings for Personal Finance for Dummies.pdf in Pinecone\n",
+            "Processed and saved: /content/FinancialChatbot/data/processed_pdf_rag/Rich-Dad-Poor-Dad_chunks.txt\n",
+            "Embeddings for Rich-Dad-Poor-Dad.pdf in Pinecone\n",
+            "Processed and saved: /content/FinancialChatbot/data/processed_pdf_rag/High Interest Rates_ A Guide For Investors_chunks.txt\n",
+            "Embeddings for High Interest Rates_ A Guide For Investors.pdf in Pinecone\n",
+            "Processed and saved: /content/FinancialChatbot/data/processed_pdf_rag/How Is Credit Card Interest Calculated_ - NerdWallet_chunks.txt\n",
+            "Embeddings for How Is Credit Card Interest Calculated_ - NerdWallet.pdf in Pinecone\n",
+            "Processed and saved: /content/FinancialChatbot/data/processed_pdf_rag/Personal Finance 101_ The complete guide to managing your money_chunks.txt\n",
+            "Embeddings for Personal Finance 101_ The complete guide to managing your money.pdf in Pinecone\n",
+            "Processed and saved: /content/FinancialChatbot/data/processed_pdf_rag/How Is Your Credit Card Interest Calculated_ – Forbes Advisor_chunks.txt\n",
+            "Error processing How Is Your Credit Card Interest Calculated_ – Forbes Advisor.pdf: (400)\n",
+            "Reason: Bad Request\n",
+            "HTTP response headers: HTTPHeaderDict({'Date': 'Thu, 24 Oct 2024 08:31:07 GMT', 'Content-Type': 'application/json', 'Content-Length': '142', 'Connection': 'keep-alive', 'x-pinecone-request-latency-ms': '1', 'x-pinecone-request-id': '7121113891249981274', 'x-envoy-upstream-service-time': '2', 'server': 'envoy'})\n",
+            "HTTP response body: {\"code\":3,\"message\":\"Vector ID must be ASCII, but got 'How Is Your Credit Card Interest Calculated_ – Forbes Advisor_chunk_0'\",\"details\":[]}\n",
+            "\n",
+            "Error processing .gitkeep: Cannot read an empty file\n",
+            "Processed and saved: /content/FinancialChatbot/data/processed_pdf_rag/How to Build Credit Fast - NerdWallet_chunks.txt\n",
+            "Embeddings for How to Build Credit Fast - NerdWallet.pdf in Pinecone\n"
+          ]
+        }
       ]
     },
     {
